tests/res/set/error_setter_arity.say
type Object {
    set() { // error: Setter must have exactly two parameters
        return "hello";
    }
}

// @split

type Object {
    set(one) { // error: Setter must have exactly two parameters
        return "hello";
    }
}

// @split

type Object {
    set(one, too, many) { // error: Setter must have exactly two parameters
        return "hello";
    }
}